# Bark-Browser

./: Cargo.toml  Dockerfile  README.md  wsl.sh
.run/: Run.run.xml
lib/slab-tree/src/: node.rs
lib/slab-tree/src/node/: bark_extensions.rs  node_ref.rs
scripts/: build.ps1  build.sh  wsl.sh
src/: app.rs  main.rs
src/component/: mod.rs
src/component/dialog/: mod.rs
src/component/dialog/input/: builder.rs  mod.rs
src/component/dialog/message/: actions.rs  builder.rs  mod.rs
src/component/filesystem/: defaults.rs  event.rs  mod.rs  registers.rs
src/component/filesystem/action/: application.rs  count.rs  mod.rs  quit.rs
src/component/filesystem/command/: shell.rs
src/component/filesystem/render/: column.rs  date_time.rs  file_name.rs  file_owner.rs  file_permissions.rs  file_size.rs  mod.rs
src/component/filesystem/tree/: mod.rs
src/component/input/: mod.rs  overlay.rs
src/file/: kind.rs  mod.rs  mode.rs  name.rs  owner.rs
src/gui/: actions.rs  mod.rs  view.rs
src/gui/action/: expand_collapse.rs  mod.rs  quit.rs
src/gui/action/movement/: mod.rs  parents.rs  siblings.rs  up_down.rs
src/gui/components/: column.rs  date_time.rs  file_name.rs  file_owner.rs  file_permissions.rs  file_size.rs  mod.rs
src/input/keymap/: binding.rs  mod.rs  parser.rs
src/state/: action.rs  environment.rs  event.rs  init.rs  layer.rs  mod.rs  view.rs
src/state/action/: mod.rs  quit.rs
src/state/filesystem/: mod.rs
src/state/tree/: above_below.rs  expand_collapse.rs  mod.rs  root_node.rs
src/util/: integer_length.rs  mod.rs  slab_tree.rs
(+43 files in other folders)
