[package]
name = "bark"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
chrono = { version = "0.4.24", features = ["std", "clock"], default-features = false }
crossterm = "0.26.1"
lazy_static = "1.4.0"
ratatui = "0.21.0"
slab_tree = "0.3.2"

[target.'cfg(unix)'.dependencies]
users = "0.11"

[patch.crates-io.slab_tree]
git = "https://github.com/jsinger67/slab-tree.git"
branch = "set_root_fix"
